--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -7,5 +7,17 @@
 	"INTRO_DESCRIPTION": "Cuban computer scientist from Havana University. Currently working as full-stack engineer building .net and Vuejs applications. I play with astro and rust in my free time",
 	"ABOUT_ME_TITLE": "About me",
 	"ABOUT_ME_DESCRIPTION": "Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy coding on and off the work. I started working as a backend developer in 2020 using .net technologies and sql server.",
-	"ABOUT_ME_DESCRIPTION_SECOND_PARAGRAPH": "Currently, I'm also working on frontend technologies like angular, vue, html, css."
+	"ABOUT_ME_DESCRIPTION_SECOND_PARAGRAPH": "Currently, I'm also working on frontend technologies like angular, vue, html, css.",
+	"CONTACT_TITLE": "Contact",
+	"CONTACT_DESCRIPTION": "I'm always open for new job oportunities or answer any question. You can reach me through:",
+	"CONTACT_FOOTER": "© 2022 Carlos Jorge",
+	"CONTACT_FOOTER_PUBLISHED": "Published",
+	"CONTACT_FOOTER_PUBLISHED_ARIAL_LABEL": "Link to project published on GitHub",
+	"CONTACT_FOOTER_AFTER_PUBLISHED": "in",
+	"CONTACT_FOOTER_GITHUB_PAGE": "Github Page",
+	"CONTACT_FOOTER_GITHUB_PAGE_ARIAL_LABEL": "Github pages link",
+	"CONTACT_MAIL_ARIAL_LABEL": "Contact via this email address",
+	"CONTACT_GITHUB_ARIAL_LABEL": "See my github profile",
+	"CONTACT_LINKEDIN_ARIAL_LABEL": "See my linkedin profile and connect with me",
+	"CONTACT_TWITTER_ARIAL_LABEL": "See my twitter profile and follow me"
 }
