🐞 fix: change ARIAL to ARIA

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -13,18 +13,18 @@
 	"CONTACT_DESCRIPTION": "I'm always open for new job oportunities or answer any question. You can reach me through:",
 	"CONTACT_FOOTER": "© 2022 Carlos Jorge",
 	"CONTACT_FOOTER_PUBLISHED": "Published",
-	"CONTACT_FOOTER_PUBLISHED_ARIAL_LABEL": "Link to project published on GitHub",
+	"CONTACT_FOOTER_PUBLISHED_ARIA_LABEL": "Link to project published on GitHub",
 	"CONTACT_FOOTER_AFTER_PUBLISHED": "in",
 	"CONTACT_FOOTER_GITHUB_PAGE": "Github Page",
-	"CONTACT_FOOTER_GITHUB_PAGE_ARIAL_LABEL": "Github pages link",
-	"CONTACT_MAIL_ARIAL_LABEL": "Contact via this email address",
-	"CONTACT_GITHUB_ARIAL_LABEL": "See my github profile",
-	"CONTACT_LINKEDIN_ARIAL_LABEL": "See my linkedin profile and connect with me",
-	"CONTACT_TWITTER_ARIAL_LABEL": "See my twitter profile and follow me",
+	"CONTACT_FOOTER_GITHUB_PAGE_ARIA_LABEL": "Github pages link",
+	"CONTACT_MAIL_ARIA_LABEL": "Contact via this email address",
+	"CONTACT_GITHUB_ARIA_LABEL": "See my github profile",
+	"CONTACT_LINKEDIN_ARIA_LABEL": "See my linkedin profile and connect with me",
+	"CONTACT_TWITTER_ARIA_LABEL": "See my twitter profile and follow me",
 	"HEADER_PROJECTS": "Projects",
-	"HEADER_PROJECTS_ARIAL_LABEL": "See my projects",
-	"HEADER_ABOUT_ME_ARIAL_LABEL": "Additional information about me",
-	"HEADER_CONTACT_ARIAL_LABEL": "You can contact me throught...",
+	"HEADER_PROJECTS_ARIA_LABEL": "See my projects",
+	"HEADER_ABOUT_ME_ARIA_LABEL": "Additional information about me",
+	"HEADER_CONTACT_ARIA_LABEL": "You can contact me throught...",
 	"HEADER_HOME": "Home",
-	"HEADER_HOME_ARIAL_LABEL": "Go to presentation"
+	"HEADER_HOME_ARIA_LABEL": "Go to presentation"
 }
