--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -13,18 +13,18 @@
 	"CONTACT_DESCRIPTION": "Siempre abierto a nuevas oportunities de trabajo o responder cualquier pregunta. Puedes contactarme a través:",
 	"CONTACT_FOOTER": "© 2022 Carlos Jorge",
 	"CONTACT_FOOTER_PUBLISHED": "Publicado",
-	"CONTACT_FOOTER_PUBLISHED_ARIAL_LABEL": "Link del proyecto publicado en GitHub",
+	"CONTACT_FOOTER_PUBLISHED_ARIA_LABEL": "Link del proyecto publicado en GitHub",
 	"CONTACT_FOOTER_AFTER_PUBLISHED": "en",
 	"CONTACT_FOOTER_GITHUB_PAGE": "Github Page",
-	"CONTACT_FOOTER_GITHUB_PAGE_ARIAL_LABEL": "Link de github pages",
-	"CONTACT_MAIL_ARIAL_LABEL": "Contactame a través de mi correo electrónico",
-	"CONTACT_GITHUB_ARIAL_LABEL": "Mira mi perfil de github",
-	"CONTACT_LINKEDIN_ARIAL_LABEL": "Mira mi perfil de linkedin profile y conecta conmigo",
-	"CONTACT_TWITTER_ARIAL_LABEL": "Mira mi perfil de twitter y sigueme",
+	"CONTACT_FOOTER_GITHUB_PAGE_ARIA_LABEL": "Link de github pages",
+	"CONTACT_MAIL_ARIA_LABEL": "Contactame a través de mi correo electrónico",
+	"CONTACT_GITHUB_ARIA_LABEL": "Mira mi perfil de github",
+	"CONTACT_LINKEDIN_ARIA_LABEL": "Mira mi perfil de linkedin profile y conecta conmigo",
+	"CONTACT_TWITTER_ARIA_LABEL": "Mira mi perfil de twitter y sigueme",
 	"HEADER_PROJECTS": "Proyectos",
-	"HEADER_PROJECTS_ARIAL_LABEL": "Mira mis proyectos",
-	"HEADER_ABOUT_ME_ARIAL_LABEL": "Información adicional acerca de mí",
-	"HEADER_CONTACT_ARIAL_LABEL": "Me puedes contactar a través de...",
+	"HEADER_PROJECTS_ARIA_LABEL": "Mira mis proyectos",
+	"HEADER_ABOUT_ME_ARIA_LABEL": "Información adicional acerca de mí",
+	"HEADER_CONTACT_ARIA_LABEL": "Me puedes contactar a través de...",
 	"HEADER_HOME": "Portada",
-	"HEADER_HOME_ARIAL_LABEL": "Ir a la presentatión"
+	"HEADER_HOME_ARIA_LABEL": "Ir a la presentatión"
 }
