--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -5,6 +5,8 @@
 	"INTRO_TITLE_AFTER_BR2": "Un desarrollador Web!",
 	"INTRO_SUBTITLE": "Bienvenido a mi portafolio!",
 	"INTRO_DESCRIPTION": "Soy un científico de la computación graduado en la Universidad de la Habana. Actualment trabajo como desarrollador full-stack creando aplicaciones de .net y Vuejs. En mis tiempos libres juego un poco con Astro y Rust ;)",
+	"PROJECTS_TITLE": "Algunos proyectos",
+	"PROJECTS_TITLE_AFTER_BR": "Que construí",
 	"ABOUT_ME_TITLE": "Acerca de mí",
 	"ABOUT_ME_DESCRIPTION": "Hola, Mi nombre es Carlos Jorge. Soy un desarrollador full-stack que disfura programar dentro y fuera del trabajo. Empecé a trabajar como desarrollador backend usando tecnologías .net y sql server.",
 	"ABOUT_ME_DESCRIPTION_SECOND_PARAGRAPH": "Actualmente. También trabajo con tecnologías frontend como angular, vue, html, css.",
