--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -28,5 +28,19 @@
 	"HEADER_ABOUT_ME_ARIA_LABEL": "Additional information about me",
 	"HEADER_CONTACT_ARIA_LABEL": "You can contact me throught...",
 	"HEADER_HOME": "Home",
-	"HEADER_HOME_ARIA_LABEL": "Go to presentation"
+	"HEADER_HOME_ARIA_LABEL": "Go to presentation",
+	"PROYECTS": {
+		"CUVIMAKER": {
+			"description": "An online cv maker web application used to design a custom curriculum vitae.",
+			"anchorLabel": "See my online cv maker github project"
+		},
+		"RUSTY_COPIER": {
+			"description": "Its a copier implemented in rust programming language.",
+			"anchorLabel": "See my rusty copier github project"
+		},
+		"ANGULAR_PORTFOLIO": {
+			"description": "It is a personal portfolio built with angular using really cool animation (Angular animations).",
+			"anchorLabel": "See my portfolio github project"
+		}
+	}
 }
