--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -26,7 +26,7 @@
 	"HEADER_PROJECTS": "Proyectos",
 	"HEADER_PROJECTS_ARIA_LABEL": "Mira mis proyectos",
 	"HEADER_ABOUT_ME_ARIA_LABEL": "Información adicional acerca de mí",
-	"HEADER_CONTACT_ARIA_LABEL": "Me puedes contactar a través de...",
+	"HEADER_CONTACT_ARIA_LABEL": "Puedes acceder a mi contacto a través de...",
 	"HEADER_HOME": "Portada",
 	"HEADER_HOME_ARIA_LABEL": "Ir a la presentatión",
 	"PROYECTS": {
@@ -42,5 +42,9 @@
 			"description": "Es un portafolio personal hecho en angular usando animaciones interesantes(Angular animations).",
 			"anchorLabel": "Mira el proyecto de github de mi portafolio"
 		}
+	},
+	"LOCALES": {
+		"SPANISH": "Español",
+		"ENGLISH": "Inglés"
 	}
 }
