🐞 fix: change angular description

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -39,7 +39,7 @@
 			"anchorLabel": "Mira el proyecto de github del rusty copier"
 		},
 		"ANGULAR_PORTFOLIO": {
-			"description": "Es un portafolio personal hecho en angular usando animaciones interesantes(Angular animations).",
+			"description": "Es un portafolio personal hecho en angular usando Angular animations.",
 			"anchorLabel": "Mira el proyecto de github de mi portafolio"
 		}
 	},
