--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,5 +1,8 @@
 {
-	"SEO_TITLE": "",
+	"SEO_LANG": "es",
+	"SEO_LOCALE": "es-ES",
+	"SEO_TITLE": "Portafolio personal de Carlos Jorge",
+	"SEO_DESCRIPTION": "Portafolio personal de Carlos Jorge. Enseño mis proyectos más importantes de github. Mi principal meta con estos proyectos es divertirme programando y aprender nuevas tecnologías, buenas prácticas y tratar de llevar a cabo ideas creativas",
 	"INTRO_TITLE": "Hola, Soy",
 	"INTRO_TITLE_AFTER_BR1": "Carlos Jorge,",
 	"INTRO_TITLE_AFTER_BR2": "Un desarrollador Web!",
