--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -46,6 +46,10 @@
 		"ANGULAR_PORTFOLIO": {
 			"description": "It is a personal portfolio built with angular using really cool animation (Angular animations).",
 			"anchorLabel": "See my portfolio github project"
+		},
+		"VUE_FLUID_DND": {
+			"description": "A vue3 drag and drop library to sort all kind of lists.",
+			"anchorLabel": "See VueFluidDnD my drag and drop librery github project"
 		}
 	},
 	"EXPERIENCE": [
