✨ feat: create posts pages

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -77,7 +77,8 @@
 		{
 			"name": "¿Como crear una librería para Vue3?",
 			"description": "En este artículo explicare paso a paso como crear un librería para Vue3 usando <strong>Vite</strong> y <strong>Typescript</strong>.",
-			"coverFile": "vue-library-article-cover.webp"
+			"coverFile": "vue-library-article-cover.webp",
+			"link": "como-crear-una-librer-a-para-vue3"
 		}
 	],
 	"LOCALES": {
