✨ feat: Add my last name

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,8 +1,8 @@
 {
 	"SEO_LANG": "en",
 	"SEO_LOCALE": "en_US",
-	"SEO_TITLE": "Carlos Jorge's personal portfolio website",
-	"SEO_DESCRIPTION": "Carlos Jorge's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas",
+	"SEO_TITLE": "Carlos Jorge Rodríguez | Website",
+	"SEO_DESCRIPTION": "Carlos Jorge Rodríguez's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas",
 	"INTRO_TITLE": "Hi, I am",
 	"INTRO_TITLE_AFTER_BR1": "Carlos Jorge,",
 	"INTRO_TITLE_AFTER_BR2": "Web developer!",
