--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -5,7 +5,7 @@
 	"SEO_DESCRIPTION": "Portafolio personal de Carlos Jorge Rodríguez. Enseño mis proyectos más importantes de github. Mi principal meta con estos proyectos es divertirme programando y aprender nuevas tecnologías, buenas prácticas y tratar de llevar a cabo ideas creativas",
 	"INTRO_TITLE": "Hola, Soy",
 	"INTRO_TITLE_AFTER_BR1": "Carlos Jorge,",
-	"INTRO_TITLE_AFTER_BR2": "Desarrollador Web!",
+	"INTRO_TITLE_AFTER_BR2": "",
 	"INTRO_SUBTITLE": "Y este es mi portafolio!",
 	"INTRO_DESCRIPTION": "Soy un científico de la computación graduado en la <b>Universidad de la Habana</b>. Actualmente trabajo como desarrollador <i>full-stack</i> creando aplicaciones de <b>.net</b> y <b>Vuejs</b>. En mis tiempos libres juego un poco con <b>Astro</b> y <b>Rust</b>  ;)",
 	"PROJECTS_TITLE": "Algunos proyectos",
@@ -57,7 +57,7 @@
 			"date": "Actualmente...",
 			"ocupation": "Desarrollador Fullstack en Myndgoals",
 			"description": "Trabajo para Opus EHR una plataforma de atención médica que rastrea y maneja los datos de los paciente, mejoro el compromiso con el cliente y las admisiones.",
-			"logoFile": "MyndGoals-logo.ico"
+			"logoFile": "MyndGoals-logo.webp"
 		},
 		{
 			"date": "Marzo del 2022",
