--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -57,19 +57,22 @@
 			"date": "Actualmente...",
 			"ocupation": "Desarrollador Fullstack en Myndgoals",
 			"description": "Trabajo para Opus EHR una plataforma de atención médica que rastrea y maneja los datos de los paciente, mejoro el compromiso con el cliente y las admisiones.",
-			"logoFile": "MyndGoals-logo.webp"
+			"logoFile": "MyndGoals-logo.webp",
+			"logoAlt": "Logo de MyndGoals"
 		},
 		{
 			"date": "Marzo del 2022",
 			"ocupation": "Desarrollador Fullstack en JYGASOFT",
 			"description": "Trabajé en un sistema de ensamblaje de autos usando tecnologías de .net y AngularJS.",
-			"logoFile": "Jygasoft-logo.webp"
+			"logoFile": "Jygasoft-logo.webp",
+			"logoAlt": "Logo de JYGASOFT"
 		},
 		{
 			"date": "Noviembre del 2020",
 			"ocupation": "Ingeniero de datos en DATYS",
 			"description": "Trabajé usando herramientas de virtualización de datos, mejorando el rendimiento del flujo de datos de un banco cubano.",
-			"logoFile": "Datys-logo.webp"
+			"logoFile": "Datys-logo.webp",
+			"logoAlt": "Logo de Datys"
 		}
 	],
 	"ARTICLE_TITLE": "Artículos",
