✨ feat: add group tailwind classes to work

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -8,8 +8,7 @@
 	"INTRO_TITLE_AFTER_BR2": "",
 	"INTRO_SUBTITLE": "Y este es mi portafolio!",
 	"INTRO_DESCRIPTION": "Soy un científico de la computación graduado en la <b>Universidad de la Habana</b>. Actualmente trabajo como desarrollador <i>full-stack</i> creando aplicaciones de <b>.net</b> y <b>Vuejs</b>. En mis tiempos libres juego un poco con <b>Astro</b> y <b>Rust</b>  ;)",
-	"PROJECTS_TITLE": "Algunos proyectos",
-	"PROJECTS_TITLE_AFTER_BR": "Que he echo",
+	"PROJECTS_TITLE": "Proyectos",
 	"ABOUT_ME_TITLE": "Acerca de mí",
 	"ABOUT_ME_DESCRIPTION": "Hola, Mi nombre es <strong>Carlos Jorge</strong>. Soy un desarrollador <i>full-stack</i> que disfura programar dentro y fuera del trabajo. Empecé a trabajar como desarrollador <i>backend</i> usando tecnologías <b>.net</b> y <b>sql server</b>.",
 	"ABOUT_ME_DESCRIPTION_SECOND_PARAGRAPH": "Actualmente. También trabajo con tecnologías <i>frontend</i> como <b>angular</b>, <b>vue</b>, <b>html</b>, <b>css</b>.",
