--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,8 +8,7 @@
 	"INTRO_TITLE_AFTER_BR2": "",
 	"INTRO_SUBTITLE": "Welcome to my personal portfolio!",
 	"INTRO_DESCRIPTION": "Cuban computer scientist from <b>Havana University</b>. Currently working as full-stack engineer building <b>.net</b> and <b>Vuejs</b> applications.",
-	"PROJECTS_TITLE": "Some projects",
-	"PROJECTS_TITLE_AFTER_BR": "I've made",
+	"PROJECTS_TITLE": "Projects",
 	"ABOUT_ME_TITLE": "About",
 	"ABOUT_ME_DESCRIPTION": "Hello, My name is <strong>Carlos Jorge</strong>. I'm a full-stack engineer that enjoy coding on and off the work. I started working as a backend developer in 2020 using <b>.net</b> technologies and <b>sql server</b>.",
 	"ABOUT_ME_DESCRIPTION_SECOND_PARAGRAPH": "Currently, I'm also working on frontend technologies like <b>angular</b>, <b>vue</b>, <b>html</b>, <b>css</b>.",
