--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -2,7 +2,7 @@
 	"SEO_LANG": "es",
 	"SEO_LOCALE": "es-ES",
 	"SEO_TITLE": "Carlos Jorge Rodríguez | Página web",
-	"SEO_DESCRIPTION": "Portafolio personal de Carlos Jorge Rodríguez. Enseño mis proyectos más importantes de github. Mi principal meta con estos proyectos es divertirme programando y aprender nuevas tecnologías, buenas prácticas y tratar de llevar a cabo ideas creativas",
+	"SEO_DESCRIPTION": "Portafolio personal de Carlos Jorge Rodríguez. Enseño mis proyectos más importantes de GitHub, experiencia laboral, artículos y más información personal",
 	"INTRO_TITLE": "Hola, Soy",
 	"INTRO_TITLE_AFTER_BR1": "Carlos Jorge,",
 	"INTRO_TITLE_AFTER_BR2": "",
