✨ feat: Improve about me

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -10,9 +10,8 @@
 	"INTRO_DESCRIPTION": "Cuban computer scientist from <b>Havana University</b>. Currently working as full-stack engineer building <b>.net</b> and <b>Vuejs</b> applications.",
 	"PROJECTS_TITLE": "Projects",
 	"ABOUT_ME_TITLE": "About",
-	"ABOUT_ME_DESCRIPTION": "Hello, My name is <strong>Carlos Jorge</strong>. I'm a full-stack engineer that enjoy coding on and off the work. I started working as a backend developer in 2020 using <b>.net</b> technologies and <b>sql server</b>.",
-	"ABOUT_ME_DESCRIPTION_SECOND_PARAGRAPH": "Currently, I'm also working on frontend technologies like <b>angular</b>, <b>vue</b>, <b>html</b>, <b>css</b>.",
-	"ABOUT_ME_CV_ARIA_LABEL": "Download Curriculum Vitae pdf",
+	"ABOUT_ME_DESCRIPTION": "I am, above all, a natural-born <b>problem solver</b>. My innate curiosity, which I've had since childhood, drives me to investigate and find solutions in any area, from the professional to the domestic.",
+	"ABOUT_ME_DESCRIPTION_SECOND_PARAGRAPH": "I balance my technical life with <b>rock music</b>, <b>anime</b>, <b>films</b>, and daily <b>reading</b>—a habit that allows me to disconnect from digital overstimulation.",
 	"CONTACT_TITLE": "Contact",
 	"CONTACT_DESCRIPTION": "I'm always open for new job oportunities or answer any question. You can reach me through:",
 	"CONTACT_FOOTER": "© 2022 Carlos Jorge",
