--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -10,8 +10,8 @@
 	"INTRO_DESCRIPTION": "Soy un científico de la computación graduado en la <b>Universidad de la Habana</b>. Actualmente trabajo como desarrollador <i>full-stack</i> creando aplicaciones de <b>.net</b> y <b>Vuejs</b>. En mis tiempos libres juego un poco con <b>Astro</b> y <b>Rust</b>  ;)",
 	"PROJECTS_TITLE": "Proyectos",
 	"ABOUT_ME_TITLE": "Acerca de mí",
-	"ABOUT_ME_DESCRIPTION": "Hola, Mi nombre es <strong>Carlos Jorge</strong>. Soy un desarrollador <i>full-stack</i> que disfura programar dentro y fuera del trabajo. Empecé a trabajar como desarrollador <i>backend</i> usando tecnologías <b>.net</b> y <b>sql server</b>.",
-	"ABOUT_ME_DESCRIPTION_SECOND_PARAGRAPH": "Actualmente. También trabajo con tecnologías <i>frontend</i> como <b>angular</b>, <b>vue</b>, <b>html</b>, <b>css</b>.",
+	"ABOUT_ME_DESCRIPTION": "Soy, ante todo, un <b>resolvedor de problemas</b> por naturaleza. Mi curiosidad innata, presente desde niño, me impulsa a investigar y encontrar soluciones en cualquier ámbito, desde el profesional hasta el doméstico.",
+	"ABOUT_ME_DESCRIPTION_SECOND_PARAGRAPH": "Equilibro mi vida técnica con el <b>rock</b>, el <b>anime</b>, el <b>cine</b> y la <b>lectura</b> diaria, un hábito que me permite desconectar de la sobreestimulación digital.",
 	"ABOUT_ME_CV_ARIA_LABEL": "Descargar pdf del Curriculum Vitae",
 	"CONTACT_TITLE": "Contacto",
 	"CONTACT_DESCRIPTION": "Siempre abierto a nuevas oportunities de trabajo o responder cualquier pregunta. Puedes contactarme a través:",
